[project]
name = "bento-transforms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "bento-mdf>=0.12.0",
    "bento-meta>=0.3.1",
    "minicypher>=0.1.3",
    "pydantic>=2.12.4",
    "toolz>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0,<8.0.0",
    "pytest-docker>=3.1.1,<4.0.0",
    "requests>=2.28.1,<3.0.0",
    "sphinx>=8.1.3,<9.0.0",
    "myst-nb>=1.0.0,<2.0.0",
    "sphinx-autoapi>=3.4.0,<4.0.0",
    "sphinx-rtd-theme>=3.0.2,<4.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bento_transforms"]
sources = ["src"]
